=================
Changes for crash
=================

Unreleased
==========

2015/02/24 0.11.3
=================

 - Fix: query duration was rounded incorrectly to second precision

2015/02/11 0.11.2
=================

 - Fix: do not print ``rows affected`` in status message
   of DDL statements and other statements that do not affect rows

2015/02/03 0.11.1
=================

 - Fix: return complete sql exception message

2015/02/03 0.11.0
=================

 - added ``--format`` command line option
   to support different response output formats such as
   ``tabular``, ``raw``, ``json``, ``csv`` and ``mixed``

 - BREAKING CHANGE
   the ``CONNECT <host>`` client command was changed to ``\connect <host>``
   see documentation for further details

 - alternative cli implementation using prompt_toolkit

 - added coloured printing when in interactive shell

2014/10/27 0.10.3
=================

 - require crate-python 0.12.3 to get support for the iterator protocol
   on cursor

 - Fixed an error that caused crash to crash on non posix platforms.

2014/10/02 0.10.2
=================

 - require crate-python 0.12.1 so crash sends the correct Accept Header when
   requesting crate

2014/09/19 0.10.1
=================

 - increased crate-python requirement to 0.11.2 for the improved failover
   mechanism

2014/09/02 0.10.0
=================

 - crate server version information is now also included in the connect-output.

 - improved formatting of field lists in docs
  by adding docutils configuration to docs build process

 - updated crate-python to version 0.11.1 to get a more reliable failover
   mechanism if a host goes down.

2014/07/18 0.9.14
=================

 - fix: correctly apply ``-v`` switch to increase verbosity

 - update crate-python to version 0.10.6

2014/06/27 0.9.13
=================

 - fix: avoid stripping arbitrative whitespaces from
   commands passed via stdin

2014/06/12 0.9.12
=================
